2015-01-29  Hans Wennborg  <hwennborg@google.com>  (tiny change)

	* emacs.c (decode_env_path): Add parentheses around ternary
	operator to increase readability and pacify compiler warnings.

2015-01-29  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (sys_readdir): Map ERROR_NOT_READY (as in "device not
	ready") to ENOENT.

2015-01-28  Eli Zaretskii  <eliz@gnu.org>

	* dired.c (directory_files_internal, file_name_completion)
	[WINDOWSNT]: Signal an error when errno is set non-zero by
	'readdir', regardless of its value.

	* w32.c (sys_readdir): Set errno to ENOENT when the directory
	doesn't exist and to EACCES when it's not accessible to the
	current user.  Set errno to zero when FindNextFile exhausts the
	directory, so that callers don't interpret that as an error and
	don't signal a file-error.
	(open_unc_volume): Set errno to ENOENT if WNetOpenEnum fails.

2015-01-27  Eli Zaretskii  <eliz@gnu.org>

	* dired.c (directory_files_internal) [WINDOWSNT]: If readdir
	returns NULL and errno is ENOTDIR, behave as if opendir failed to
	open the directory.  (Bug#19701)

	* w32.c (sys_readdir): If FindFirstFile fails because the
	directory doesn't exist, set errno to ENOTDIR.

2015-01-24  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (drawRect:): Add block/unblock_input (Bug#19660).

2015-01-21  Paul Eggert  <eggert@cs.ucla.edu>

	Fix coding.c subscript error
	* coding.c (CODING_ISO_INVOKED_CHARSET):
	Avoid undefined behavior if CODING_ISO_INVOCATION returns negative.

	Backport: correct old fix for GTK font selection
	* gtkutil.c (xg_get_font): Fix off-by-2 typo.
	Fixes: bug#3228

2015-01-21  Jan Djärv  <jan.h.d@swipnet.se>

        * nsterm.m (EV_TRAILER2): Set Vinhibit_quit to Qt (Bug#19531).

2015-01-17  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (produce_image_glyph): Fix display of images in R2L
	screen lines: prepend the new glyph to the ones already there
	instead of appending it.

2015-01-14  Eli Zaretskii  <eliz@gnu.org>
